modify Makefile and swagger comment
